--- a/tic_tac_toe_web/game.html
+++ b/tic_tac_toe_web/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 	<head>
 		<link rel="stylesheet" href="main.css">
 		<style>	@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap');</style>
@@ -13,30 +13,30 @@
 			<title>JOGO DA VELHA</title>
 			<div class="menu">
 				<h1>JOGO DA VELHA</h1>
-				<h3>How To Play</h3>
+				<h3>Como jogar:</h3>
 				<ol>
-					<li>Player 1 Create a new game by entering the username</li>
-					<li>Player 2 Enter another username and the room id that is displayed on first window.</li>
-					<li>Click on join game. </li>
+					<li>Jogador 1: Crie um novo jogo colocando seu nome de usuário</li>
+					<li>Jogador 2: Crie seu nome de usuário e coloque o ID da sala que quer entrar.</li>
+					<li>Clique em entrar no jogo.</li>
 				</ol>
-				<h4>Create a new Game</h4>
-				<input type="text" name="name" id="nameNew" placeholder="Enter your name" required>
-				<button class="neumorphism-1 font_button" type="button" id="new">New Game</button>
+				<h4>Criando um novo jogo</h4>
+				<input type="text" name="name" id="nameNew" placeholder="Digite o seu nome" required>
+				<button class="neumorphism-1 font_button" type="button" id="new">Novo jogo</button>
 				
 				<br><br>
-				<h4>Join an existing game</h4>
-				<input type="text" name="name" id="nameJoin" placeholder="Enter your name" required>
-				<input type="text" name="room" id="room" placeholder="Enter Game ID" required>
-				<button class="neumorphism-1 font_button" type="button" id="join">Join Game</button>
+				<h4>Entrando em um jogo existente</h4>
+				<input type="text" name="name" id="nameJoin" placeholder="Digite o seu nome" required>
+				<input type="text" name="room" id="room" placeholder="Digite o ID da sala" required>
+				<button class="neumorphism-1 font_button" type="button" id="join">Entar no jogo</button>
 			</div>
 			<div class="gameBoard" style="display: none;">
 				<h2 id="userHello"></h2>
 				<h3 id="turn"></h3>
 				<table class="center">
 					<tr>
-						<td><button class="tile" type="button" id="button_00" ></button></td>
-						<td><button class="tile" type="button" id="button_01"></button></td>
-						<td><button class="tile" type="button" id="button_02"></button></td>
+						<td><button class="tile" id="button_00" ></button></td>
+						<td><button class="tile" id="button_01"></button></td>
+						<td><button class="tile" id="button_02"></button></td>
 					</tr>
 					<tr>
 						<td><button class="tile" type="button" id="button_10"></button></td>
