Chamada de jogo ok com o ID da sala como nome da Aba

--- a/tic_tac_toe_web/index.html
+++ b/tic_tac_toe_web/index.html
@@ -65,6 +65,9 @@
               <input type="text" name="room" id="room" placeholder="Digite o ID da sala" required />
               <button class="neumorphism-1 font_button" type="button" id="btnJoinGame">Entrar no jogo</button>
             </div>
+          </div>
+          <!--MENU INICIAR E JOGO-->
+          <div class="tab-pane fade show active" id="gameN" role="tabpanel" aria-labelledby="home-tab">
             <div class="gameBoard " style="display: none" id="gameMenu">
               <p id="userHello"><b id="turn"></b></p>
               <p><b id="turn"></b></p>
