Inicio da gerencia de IDs por sala

--- a/tic_tac_toe_web/index.html
+++ b/tic_tac_toe_web/index.html
@@ -41,7 +41,7 @@
           </li>-->
           <li class="nav-item" role="presentation">
             <button class="button_aba neumorphism-1 font_button" type="button"  data-toggle="tab" id="menu-tab" href="#menu" role="tab"
-              aria-controls="contact" aria-selected="false">MENU</button>
+              aria-controls="menu" aria-selected="true">MENU</button>
           </li>
         </ul>
         
