Multi Salas com Multi Jogadores

--- a/tic_tac_toe_web/index.html
+++ b/tic_tac_toe_web/index.html
@@ -51,7 +51,7 @@
           <div class="tab-pane fade show active" id="menu" role="tabpanel" aria-labelledby="home-tab">
             <div class="menu containerMenu">
               <h3 class="logo ">JOGO DA VELHA</h3>
-              <h3 class="instrucoes">Agradescemos sua preferência <b id="usuario"></b></h3>
+              <h3 class="instrucoes">Agradecemos sua preferência <b id="usuario"></b></h3>
               <h3 class="instrucoes">Como jogar:</h3>
               <ol>
                 <li>Jogador 1: Crie um jogo clicando no botão "Novo Jogo"</li>
